Changelog for Statocles

{{ $NEXT }}

0.097     2020-03-31 21:51:03-05:00 America/Chicago

    [Added]

    - Added `-l` and `-I <path>` options to add include directories to
      the `statocles` command. Thanks @ferki! [Github #597]

0.096     2019-12-05 10:24:21-06:00 America/Chicago

    [Added]

    - Added option to stop deployment if the link check fails. Thanks
      @ferki! [Github #594]

0.095     2019-10-11 22:15:19-05:00 America/Chicago

    [Added]

    - Added prev/next <link> tags to blog posts. Thanks
      @dertuxmalwieder! [Github #588]
    - Added option for the Lint plugin to stop the build upon error.
      Thanks @ferki! [Github #591]

0.094     2019-08-13 22:28:29-05:00 America/Chicago

    [Fixes]

    - Fixed 'log' method exception. Thanks @dnmfarrell and @wbazant!
      (Github #563)
    - Fixed Role::Tiny 2.000007 bug (by upgrading to 2.000008). Thanks
      @andk! (Github #579)

0.093     2018-03-30 17:29:15-05:00 America/Chicago

    [BREAKING CHANGES]

    - Fixed deploy objects failing to find necessary content during
      deploy. When deploying a site, we need to copy the entire site to
      a temporary directory first, because the deploy might lose access
      to the templates and other source files (if, for example, the site
      is deployed to a different git branch).

      This means the deploy API has changed again to take a path, not
      a list of pages. The deploy copies all the files from the path and
      then does what it needs.

0.092     2018-03-29 22:51:16-05:00 America/Chicago

    *** This version is broken, do not use ***

    [BREAKING CHANGES]

    - The API for deploy objects has changed. They now accept an
      arrayref of pages, not a store object to copy. This is an attempt
      to reduce the amount of filesystem operations Statocles needs to
      do during deploy (formerly it was once to build the site, then
      copy the whole site to the deploy).
