@@ -10,7 +10,7 @@ requires "IPC::Open3" => "0";
 requires "Import::Base" => "0.012";
 requires "JSON::PP" => "0";
 requires "List::UtilsBy" => "0.09";
-requires "Mojolicious" => "6.54";
+requires "Mojolicious" => "9";
 requires "Moo" => "2.000001";
 requires "Path::Tiny" => "0.084";
 requires "Pod::Simple" => "3.31";
@@ -21,7 +21,7 @@ requires "Text::Unidecode" => "0";
 requires "Type::Tiny" => "0";
 requires "Types::Path::Tiny" => "0";
 requires "YAML" => "0";
-requires "perl" => "5.014";
+requires "perl" => "5.016";
 requires "strict" => "0";
 requires "warnings" => "0";
 recommends "HTML::Lint::Pluggable" => "0.06";
